Bug 93262 - [snb gt1] seqno writes stop after ringbuffer wraparound at address 0
Summary: [snb gt1] seqno writes stop after ringbuffer wraparound at address 0
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL: https://patchwork.freedesktop.org/pat...
Whiteboard:
Keywords:
: 93033 94630 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-05 16:22 UTC by Charles Stanhope
Modified: 2017-07-03 11:05 UTC (History)
3 users (show)

See Also:
i915 platform: SNB
i915 features: GPU hang


Attachments
The compressed contents of /sys/class/drm/card0/error (504.20 KB, text/plain)
2015-12-05 16:22 UTC, Charles Stanhope
no flags Details
Output of dmesg (56.77 KB, text/plain)
2015-12-05 16:26 UTC, Charles Stanhope
no flags Details

Description Charles Stanhope 2015-12-05 16:22:51 UTC
Created attachment 120366 [details]
The compressed contents of /sys/class/drm/card0/error

On this particular machine I've been seeing GPU hangs regularly whenever videos are displayed. Messages similar to the following regularly appear in my logs:

drm/i915: Resetting chip after gpu hang
[drm] stuck on render ring
[drm] GPU HANG: ecode 6:0:0x87e8fffd, in MediaPl~ack #66 [3920], reason: Ring hung, action: reset
[drm:i915_set_reset_status [i915]] *ERROR* gpu hanging too fast, banning! 

Today is the first time I had seen the GPU crash message which asked for a bug report. I'm using Fedora 23.

Linux hydra 4.2.6-301.fc23.x86_64 #1 SMP Fri Nov 20 22:22:41 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux
Comment 1 Charles Stanhope 2015-12-05 16:24:54 UTC
I see the attachment lost filename information. The attachment is just gzip compressed file.
Comment 2 Charles Stanhope 2015-12-05 16:26:39 UTC
Created attachment 120367 [details]
Output of dmesg
Comment 3 Chris Wilson 2016-03-26 20:54:28 UTC
*** Bug 93033 has been marked as a duplicate of this bug. ***
Comment 4 Chris Wilson 2016-03-26 20:58:09 UTC
https://patchwork.freedesktop.org/patch/78430/
Comment 5 Chris Wilson 2016-03-30 09:08:34 UTC
*** Bug 94630 has been marked as a duplicate of this bug. ***
Comment 6 Chris Wilson 2016-04-14 09:55:26 UTC
I believe this

commit a687a43a48f0f91ba37dce5a14b467258ed6f035
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Apr 13 17:35:11 2016 +0100

    drm/i915: Force ringbuffers to not be at offset 0

which fixes similar symptoms for me, should help.
Comment 7 Chris Wilson 2016-06-17 18:32:43 UTC
Optimistically assuming it is the bug/patch identified.
Comment 8 Jari Tahvanainen 2017-07-03 11:05:08 UTC
Closing >1 year old resolved+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.